--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 BOT_TOKEN = 7509379380:AAEfBxHegRIf2zN6H_S1rnmt29gnIe7FdQ4
 PORT = 5200
-SERVER_URL = https://515d-197-211-58-53.ngrok-free.app
+SERVER_URL = https://c02005ff5d46.ngrok-free.app
 DB_HOST = localhost
 DB_PORT = 5432
 DB_USER = wdai
