--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "sequelize": "^6.37.7",
-    "technicalindicators": "^3.1.0"
+    "technicalindicators": "^3.1.0",
+    "tvdatafeedclient-js": "^1.0.2"
   }
 }
