--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "dotenv": "^16.6.0",
     "express": "^5.1.0",
     "node-cron": "^4.1.1",
-    "node-telegram-bot-api": "^0.63.0",
+    "node-telegram-bot-api": "^0.66.0",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "sequelize": "^6.37.7",
     "technicalindicators": "^3.1.0",
-    "tvdatafeedclient-js": "^1.0.2"
+    "tvdatafeedclient-js": "^1.0.2",
+    "twitter-api-v2": "^1.24.0"
   }
 }
